# dwc-vigil

./: .eslintrc.js  .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.md  jest.config.js  package-lock.json  package.json  plugin.json  pyproject.toml
.claude/skills/dwc-sbc-plugin/: SKILL.md
.github/workflows/: ci.yml
docs/: object-model-documentation.md
dsf/: vigil-daemon.py  vigil_api.py  vigil_persistence.py  vigil_time.py  vigil_tracker.py
scripts/: build-zip.js  version.js
src/: VigilDashboard.vue  index.js  routes.js
src/__mocks__/: routes.js
src/components/: AxisTable.vue  CounterTabs.vue  ExportButton.vue  FanChart.vue  HeaterChart.vue  HistoryChart.vue  JobsPieChart.vue  ServiceEventDialog.vue  ServiceLogDialog.vue  ServiceResetDialog.vue  StatCard.vue  VitalsCard.vue
tests/: test_api.py  test_dsf_imports.py  test_persistence.py  test_time.py  test_tracker.py
tests/frontend/: StatCard.test.js  setup.js
tests/frontend/__mocks__/: chart.js
tests/frontend/integration/: plugin-registration.test.js  plugin-structure.test.js
